# TFMini-Plus_python

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tfmplus.py
src/: tfmp_defines.py  tfmp_main.py  tfmplus.py
src/TFMPlus_pkg/: TFMPlus.py  TFMPlus_h.py
src/docs/: __init__.py
src/docs/TI OPT3101/: __init__.py
src/tfmplus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tfmplus/tests/: tfmp_test.py
tests/: __init__.py  tfmp_example.py  tfmp_test.py
