[metadata]
# replace with your username:
name =tfmplus
version = 0.0.16
author = Bud Ryerson
author_email = bud@budryerson.com
description = After 14 versions on TestPyPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/budryerson/TFMini-Plus_python
project_urls =
    Bug Tracker = https://github.com/budryerson/TFMini-Plus_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
#include_package_data = True

[options.packages.find]
where= src
