[metadata]
name = tfmplus
version = 0.0.18
author = Bud Ryerson
author_email = bud@budryerson.com
description = Corrected FRAME_5 constant from 0x0003 to 0x0005
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/budryerson/TFMini-Plus_python
project_urls = 
	Bug Tracker = https://github.com/budryerson/TFMini-Plus_python/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

